2005-01-06  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/text/PlainDocument/PlainDocumentTest.java:
	Added more testcases.

2005-01-06  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/SimpleTimeZone/equals.java:
	Reformatted to become readable.

2005-01-06  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/TimeZone/setID.java: New testcases.

2005-01-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/zip/ZipEntry/Size.java: New file.

	* gnu/testlet/locales/LocaleTest.java: Fixed more Latin-1
	characters.

2005-01-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* batch_run: Allow NATIVE to be set on the command line.  Set WM
	to /bin/true if metacity is not found.
	* choose: Include GUI tests by default.
	* choose-classes: Likewise.
	* gnu/testlet/java/awt/Robot/mouseMove.java: New test.
	* gnu/testlet/java/awt/Robot/mousePress.java: Likewise.
	* gnu/testlet/java/awt/Robot/constructors.java: Likewise.
	* gnu/testlet/java/awt/Robot/createScreenCapture.java: Likewise.
	* gnu/testlet/java/awt/Robot/getPixelColor.java: Likewise.
	* gnu/testlet/java/awt/Robot/keyPress.java: Likewise.
	* gnu/testlet/java/awt/Robot/keyRelease.java: Likewise.
	* gnu/testlet/java/awt/Robot/mouseRelease.java: Likewise.
	* gnu/testlet/java/awt/Robot/mouseWheel.java: Likewise.

2005-01-04  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/table/DefaultTableModel/addColumn.java,
	* gnu/testlet/javax/swing/table/DefaultTableModel/addRow.java,
	* gnu/testlet/javax/swing/table/DefaultTableModel/constructors.java,
	* gnu/testlet/javax/swing/table/DefaultTableModel/convertToVector.java, 
	* gnu/testlet/javax/swing/table/DefaultTableModel/getColumnCount.java,
	* gnu/testlet/javax/swing/table/DefaultTableModel/getColumnName.java,
	* gnu/testlet/javax/swing/table/DefaultTableModel/getDataVector.java, 
	* gnu/testlet/javax/swing/table/DefaultTableModel/getRowCount.java,